--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-index
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>DeepOnion academy</title>
+  </head>
+  <body>
+    <form class="" action="index.html" method="post">
+      <fieldset>
+        <legend>Code of conduct</legend>
+        <p>
+          Always s
+        </p>
+      </fieldset>
+      <fieldset>
+        <legend>Your social media accounts</legend>
+        <p>
+          You don't have to add any account, but if you are going to do DeepDomination tasks on the social media platforms,
+          the proof have to show the account you enter here.
+          If you don't add an account, you cannot get points for these tasks.
+          The accounts have to be at least 1 month old.
+        </p>
+        <label for="twitter_acc">Twitter</label>
+        <input type="text" name="twitter_acc" value="">
+        <label for="facebook_acc">Facebook</label>
+        <input type="text" name="facebook_acc" value="">
+        <label for="reddit_acc">Reddit</label>
+        <input type="text" name="facebook_acc" value="">
+        <label for="youtube_acc">YouTube</label>
+        <input type="text" name="youtube_acc" value="">
+      </fieldset>
+      <fieldset>
+        <legend>Important links</legend>
+        <p>
+          <a href="https://deeponion.org/community/threads/deeponion-support-forum-index.733/" target="_blank">Support forum thread index</a>
+        </p>
+      </fieldset>
+    </form>
+  </body>
+</html>
