more to the form

--- a/index.html
+++ b/index.html
@@ -3,14 +3,43 @@
   <head>
     <meta charset="utf-8">
     <title>DeepOnion academy</title>
+    <link rel="stylesheet" type="text/css" href="https://deeponion.org/css/theme.css">
   </head>
   <body>
+    <header>
+      <img src="https://deeponion.org/community/deeponion.png"/>
+      <h1>DeepOnion Academy</h1>
+    </header>
+    <p>Prior to gaining DeepPoints you need to complete this little educational form, to make us understand you are aware of the rules.
+      This is in English for now, but if you are Russian or Chinese (or any of the other languages with active moderators ToDo:which languages)
+      you are welcome to write in your native language.
+    </p>
     <form class="" action="index.html" method="post">
       <fieldset>
         <legend>Code of conduct</legend>
         <p>
-          Always s
+          Always follow the rules currently in effect. You can find the current rules here:
+          <a href="link to rules">DeepOnion Rules and guidelines</a> ToDo: Link
         </p>
+        <label for="rules_repeat">Repeat this with your own words in the textfield.</label>
+        <textarea name="rules_repeat" rows="8" cols="80"></textarea>
+        <p>
+          Before you post, search for other posts. Some times google can be better than the internal search, so try both.
+          A google search for content on the DeepOnion forum could look like this: "deeponion.org install wallet" or "deeponion airdrop rules"
+        </p>
+        <label for="search_repeat">Repeat this with your own words in the textfield.</label>
+        <textarea name="search_repeat" rows="8" cols="80"></textarea>
+        <p>
+          As a member of the DeepOnion community you are expected to have some minimum knowledge about cryptocurrencies,
+          blockchains and the DeepOnion products themselves. It is ok to register and use the forum even if you don't have this knowledge,
+          but it is not accepted to create posts asking for basic information that is easily found with a search.
+        </p>
+        <label for="knowledge_repeat"></label>
+        <textarea name="knowledge_repeat" rows="8" cols="80"></textarea>
+        <p>
+          <strong>Keep in mind that there is a real risk to have your DeepPoints removed, and being banned for a period or time and even permanently.</strong>
+        </p>
+
       </fieldset>
       <fieldset>
         <legend>Your social media accounts</legend>
