cleanup some markup

--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
         <p>
           Before you post, search for other posts. Some times google can be better than the internal search, so try both.
           A google search for content on the DeepOnion forum could look like this: "deeponion.org install wallet" or "deeponion airdrop rules"
-        </p>
-        <label for="search_repeat">Repeat this with your own words in the textfield.</label>
-        <textarea name="search_repeat" rows="8" cols="80"></textarea>
-        <p>
+        </p><p>
+          <label for="search_repeat">Repeat this with your own words in the textfield.</label>
+          <textarea name="search_repeat" rows="8" cols="80"></textarea>
+        </p><p>
           As a member of the DeepOnion community you are expected to have some minimum knowledge about cryptocurrencies,
           blockchains and the DeepOnion products themselves. It is ok to register and use the forum even if you don't have this knowledge,
           but it is not accepted to create posts asking for basic information that is easily found with a search.
         </p>
-        <label for="knowledge_repeat"></label>
-        <textarea name="knowledge_repeat" rows="8" cols="80"></textarea>
+        <p>
+          <label for="knowledge_repeat"></label>
+          <textarea name="knowledge_repeat" rows="8" cols="80"></textarea>
+        </p>
         <p>
           <strong>Keep in mind that there is a real risk to have your DeepPoints removed, and being banned for a period or time and even permanently.</strong>
         </p>
@@ -49,14 +51,19 @@
           If you don't add an account, you cannot get points for these tasks.
           The accounts have to be at least 1 month old.
         </p>
-        <label for="twitter_acc">Twitter</label>
-        <input type="text" name="twitter_acc" value="">
-        <label for="facebook_acc">Facebook</label>
-        <input type="text" name="facebook_acc" value="">
-        <label for="reddit_acc">Reddit</label>
-        <input type="text" name="facebook_acc" value="">
-        <label for="youtube_acc">YouTube</label>
-        <input type="text" name="youtube_acc" value="">
+        <p>
+          <label for="twitter_acc">Twitter</label>
+          <input type="text" name="twitter_acc" value="">
+        </p><p>
+          <label for="facebook_acc">Facebook</label>
+          <input type="text" name="facebook_acc" value="">
+        </p><p>
+          <label for="reddit_acc">Reddit</label>
+          <input type="text" name="facebook_acc" value="">
+        </p><p>
+          <label for="youtube_acc">YouTube</label>
+          <input type="text" name="youtube_acc" value="">
+        </p>
       </fieldset>
       <fieldset>
         <legend>Important links</legend>
@@ -64,6 +71,8 @@
           <a href="https://deeponion.org/community/threads/deeponion-support-forum-index.733/" target="_blank">Support forum thread index</a>
         </p>
       </fieldset>
+
+      <button type="submit" name="button"></button>
     </form>
   </body>
 </html>
