background-color to body

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>DeepOnion academy</title>
-    <link rel="stylesheet" type="text/css" href="https://deeponion.org/css/theme.css">
+    <style>
+      body{background-color: #176093;}
+    </style>
   </head>
   <body>
     <header>
