color + new fields and links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>DeepOnion academy</title>
     <style>
-      body{background-color: #176093;}
+      header{background-color: #176093;
+      height:200px;}
     </style>
   </head>
   <body>
@@ -19,7 +20,12 @@
     <form class="" action="index.html" method="post">
       <fieldset>
         <legend>Code of conduct</legend>
-        <p>
+        <p>Consider completing this form your first task. Take your time and do it properly, or your DeepPoints simply will not count at the airdrop.
+          Read this post:https://deeponion.org/community/threads/newbie-guide-please-read-once.16004
+        </p><p>
+          <label for="newbie_guide_check">I have read through and understood the newbie guide post:</label>
+          <input type="checkbox" name="newbie_guide_check" value=""/>
+        </p><p>
           Always follow the rules currently in effect. You can find the current rules here:
           <a href="link to rules">DeepOnion Rules and guidelines</a> ToDo: Link
         </p>
@@ -37,7 +43,7 @@
           but it is not accepted to create posts asking for basic information that is easily found with a search.
         </p>
         <p>
-          <label for="knowledge_repeat"></label>
+          <label for="knowledge_repeat">Repeat this with your own words in the textfield:</label>
           <textarea name="knowledge_repeat" rows="8" cols="80"></textarea>
         </p>
         <p>
@@ -71,6 +77,8 @@
         <legend>Important links</legend>
         <p>
           <a href="https://deeponion.org/community/threads/deeponion-support-forum-index.733/" target="_blank">Support forum thread index</a>
+          <a href="https://deeponion.org/community/threads/newbie-guide-please-read-once.16004" target="_blank">Newbie guide</a>
+          <a href="https://docs.google.com/spreadsheets/d/1tmT5frUmr5dSDAm44Bl3QUA_QeQOEuLeaQ7JupbySvQ/edit#gid=1646697783">DeepPoints</a>
         </p>
       </fieldset>
 
